compile_stderr.txt
✗ Cargo compilation failed
    Updating crates.io index
     Locking 21 packages to latest compatible versions
      Adding rand v0.8.5 (available: v0.10.0)
   Compiling libc v0.2.183
   Compiling zerocopy v0.8.42
   Compiling cfg-if v1.0.4
   Compiling serde_core v1.0.228
   Compiling memchr v2.8.0
   Compiling getrandom v0.2.17
   Compiling csv-core v0.1.13
   Compiling rand_core v0.6.4
   Compiling itoa v1.0.17
   Compiling ryu v1.0.23
   Compiling csv v1.4.0
   Compiling ppv-lite86 v0.2.21
   Compiling rand_chacha v0.3.1
   Compiling rand v0.8.5
   Compiling http_demo v0.1.0 (/tmp/linea_build_http_demo)
error: prefix `User` is unknown
  --> src/main.rs:25:50
   |
25 |     let mut jsonData : String = "{"name": "Linea User", "language": "Linea"}".to_string();
   |                                                  ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
25 |     let mut jsonData : String = "{"name": "Linea User ", "language": "Linea"}".to_string();
   |                                                      +

error: prefix `Header` is unknown
  --> src/main.rs:48:44
   |
48 |     let mut headers : String = "{"X-Custom-Header": "Linea-Test"}".to_string();
   |                                            ^^^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
48 |     let mut headers : String = "{"X-Custom-Header ": "Linea-Test"}".to_string();
   |                                                  +

error: prefix `Test` is unknown
  --> src/main.rs:48:60
   |
48 |     let mut headers : String = "{"X-Custom-Header": "Linea-Test"}".to_string();
   |                                                            ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
48 |     let mut headers : String = "{"X-Custom-Header": "Linea-Test "}".to_string();
   |                                                                +

error: expected one of `.`, `;`, `?`, `else`, or an operator, found `": "Linea`
  --> src/main.rs:25:40
   |
25 |     let mut jsonData : String = "{"name": "Linea User", "language": "Linea"}".to_string();
   |                                        ^^^^^^^^^ expected one of `.`, `;`, `?`, `else`, or an operator

warning: unused import: `std::io::Write`
 --> src/main.rs:2:5
  |
2 | use std::io::Write;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashSet`
 --> src/main.rs:3:5
  |
3 | use std::collections::HashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `i64`
  --> src/main.rs:13:32
   |
13 |     let mut status : i64 = resp[0 as usize];
   |                                ^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `i64`
  --> src/main.rs:14:28
   |
14 |     let mut ok : i64 = resp[1 as usize];
   |                            ^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `i64`
  --> src/main.rs:15:30
   |
15 |     let mut body : i64 = resp[2 as usize];
   |                              ^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0608`.
warning: `http_demo` (bin "http_demo") generated 2 warnings
error: could not compile `http_demo` (bin "http_demo") due to 7 previous errors; 2 warnings emitted

